# Hidden-Markov-Model

./: .gitmodules  CMakeLists.txt  LICENCE  baum_welch.cpp  constructor.t.cpp  forward.cpp  forward_backward.cpp  generate_sequence.cpp  getlines.cpp  getlines2.cpp  main.t.cpp  test_streams.cpp
include/: algorithms.h  arithmetic.h  array_hmm.h  buffered_binary_iterator.h  function_profiler.cpp  function_profiler.h  hidden_markov_model.h  iterator.h  stochastic_properties.h  type_traits.h  types.h
include/hmm/: algorithm.h  hidden_markov_model.h  io.h  iodata.h  matrix.h  sequence_generator.h  stochastical_conditions.h
include/hmm/algorithm/: backward.h  baum_welch.h  forward.h
include/iterator/: istream_binary_iterator.h
include/maikel/: function_profiler.cpp  function_profiler.h  iterator.h  math.h
include/maikel/hmm/: algorithm.h  hidden_markov_model.h  io.h  sequence_generator.h  stochastical_conditions.h
include/maikel/hmm/algorithm/: backward.h  baum_welch.h  forward.h
include/maikel/iterator/: getlines.h  ostream_binary_iterator.h
tests/: CMakeLists.txt  algorithm.t.cpp  arithmetic.t.cpp  arrays.t.cpp  function_profiler.cpp  hidden-markov-models.t.cpp  hidden-markov-models.t.h  iodata.t.cpp
